// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tile Snapshot tests > renders multiple dd elements 1`] = `
<div
>

  <div
    class="_card--neutral_HASH_14 _card_HASH_2 flex-col p-[1rem] w-full"
    data-ods="card"
  >

    <section
      class="flex flex-col w-full"
    >

      <h4
        class="_text--heading-4_HASH_31"
        data-ods="text"
      >Simple Tile
      </h4
      >

        <hr
          class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2 w-full"
          data-ods="divider"
        >

        <dl
          class="flex flex-col m-0"
        >

          <div
            class="flex flex-col gap-1"
          >

            <dt
              class="flex justify-between"
            >

              <div
                class="flex gap-1 items-center text-[var(--ods-color-text)]"
              >

                <span
                  class="_text--span_HASH_60 font-bold"
                  data-ods="text"
                >Sample Term
                </span
                >
                </div
                >
                </dt
                >

                  <dd
                    class="m-0"
                  >

                    <span
                      class="_text--span_HASH_60"
                      data-ods="text"
                    >Sample Description
                    </span
                    >
                    </dd
                    >

                      <dd
                        class="m-0"
                      >

                        <a
                          class="_link_HASH_2"
                          data-ods="link"
                          href="https://www.ovhcloud.com"
                        >Link
                        </a
                        >

                          <hr
                            class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2"
                            data-ods="divider"
                          >
                        </dd
                        >
                        </div
                        >
                        </dl
                        >
                        </section
                        >
                        </div
                        >
                        </div
                        >
`;

exports[`Tile Snapshot tests > renders simple tile 1`] = `
<div
>

  <div
    class="_card--neutral_HASH_14 _card_HASH_2 flex-col p-[1rem] w-full"
    data-ods="card"
  >

    <section
      class="flex flex-col w-full"
    >

      <h4
        class="_text--heading-4_HASH_31"
        data-ods="text"
      >Simple Tile
      </h4
      >

        <hr
          class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2 w-full"
          data-ods="divider"
        >

        <dl
          class="flex flex-col m-0"
        >

          <div
            class="flex flex-col gap-1"
          >

            <dt
              class="flex justify-between"
            >

              <div
                class="flex gap-1 items-center text-[var(--ods-color-text)]"
              >

                <span
                  class="_text--span_HASH_60 font-bold"
                  data-ods="text"
                >Sample Term
                </span
                >
                </div
                >
                </dt
                >

                  <dd
                    class="m-0"
                  >

                    <span
                      class="_text--span_HASH_60"
                      data-ods="text"
                    >Sample Description
                    </span
                    >

                      <hr
                        class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2"
                        data-ods="divider"
                      >
                    </dd
                    >
                    </div
                    >

                      <div
                        class="flex flex-col gap-1"
                      >

                        <dt
                          class="flex justify-between"
                        >

                          <div
                            class="flex gap-1 items-center text-[var(--ods-color-text)]"
                          >

                            <span
                              class="_text--span_HASH_60 font-bold"
                              data-ods="text"
                            >Sample Term
                            </span
                            >
                            </div
                            >
                            </dt
                            >

                              <dd
                                class="m-0"
                              >

                                <span
                                  class="_text--span_HASH_60"
                                  data-ods="text"
                                >Sample Description
                                </span
                                >
                                </dd
                                >
                                </div
                                >
                                </dl
                                >
                                </section
                                >
                                </div
                                >
                                </div
                                >
`;

exports[`Tile Snapshot tests > renders tile term with Actions Menu 1`] = `
<div
>

  <div
    class="_card--neutral_HASH_14 _card_HASH_2 flex-col p-[1rem] w-full"
    data-ods="card"
  >

    <section
      class="flex flex-col w-full"
    >

      <h4
        class="_text--heading-4_HASH_31"
        data-ods="text"
      >Simple Tile
      </h4
      >

        <hr
          class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2 w-full"
          data-ods="divider"
        >

        <dl
          class="flex flex-col m-0"
        >

          <div
            class="flex flex-col gap-1"
          >

            <dt
              class="flex justify-between"
            >

              <div
                class="flex gap-1 items-center text-[var(--ods-color-text)]"
              >

                <span
                  class="_text--span_HASH_60 font-bold"
                  data-ods="text"
                >Sample Term
                </span
                >
                </div
                >

                  <button
                    class="_button--outline_HASH_259 _button--primary_HASH_100 _button--sm_HASH_34 _button_HASH_2 _popover-trigger_HASH_2"
                    data-ods="popover-trigger"
                    data-scope="popover"
                    data-part="trigger"
                    dir="ltr"
                    type="button"
                    id="popover::r1::trigger"
                    aria-haspopup="dialog"
                    aria-expanded="false"
                    data-state="closed"
                    aria-controls=":r2:"
                    role="button"
                    tabindex="0"
                  >

                    <span
                      class="_icon--ellipsis-vertical_HASH_205 _icon_HASH_2"
                      data-ods="icon"
                      role="presentation"
                    >
                    </span
                    >
                    </button
                    >
                    </dt
                    >

                      <dd
                        class="m-0"
                      >

                        <span
                          class="_text--span_HASH_60"
                          data-ods="text"
                        >Sample Description
                        </span
                        >
                        </dd
                        >
                        </div
                        >
                        </dl
                        >
                        </section
                        >
                        </div
                        >
                        </div
                        >
`;

exports[`Tile Snapshot tests > renders tile term with Tooltip 1`] = `
<body
>

  <div
  >

    <div
      class="_card--neutral_HASH_14 _card_HASH_2 flex-col p-[1rem] w-full"
      data-ods="card"
    >

      <section
        class="flex flex-col w-full"
      >

        <h4
          class="_text--heading-4_HASH_31"
          data-ods="text"
        >Simple Tile
        </h4
        >

          <hr
            class="_divider--24_HASH_37 _divider--primary_HASH_10 _divider_HASH_2 w-full"
            data-ods="divider"
          >

          <dl
            class="flex flex-col m-0"
          >

            <div
              class="flex flex-col gap-1"
            >

              <dt
                class="flex justify-between"
              >

                <div
                  class="flex gap-1 items-center text-[var(--ods-color-text)]"
                >

                  <span
                    class="_text--span_HASH_60 font-bold"
                    data-ods="text"
                  >Sample Term
                  </span
                  >

                    <span
                      class="_icon--circle-question_HASH_115 _icon_HASH_2 _tooltip-trigger_HASH_2"
                      data-ods="tooltip-trigger"
                      role="button"
                      data-scope="tooltip"
                      data-part="trigger"
                      id="tooltip::r0::trigger"
                      dir="ltr"
                      data-state="open"
                      tabindex="0"
                      data-expanded=""
                      aria-describedby="tooltip::r0::content"
                    >
                    </span
                    >
                    </div
                    >
                    </dt
                    >

                      <dd
                        class="m-0"
                      >

                        <span
                          class="_text--span_HASH_60"
                          data-ods="text"
                        >Sample Description
                        </span
                        >
                        </dd
                        >
                        </div
                        >
                        </dl
                        >
                        </section
                        >
                        </div
                        >
                        </div
                        >

                          <div
                            id="tooltip::r0::popper"
                            data-scope="tooltip"
                            data-part="positioner"
                            dir="ltr"
                            style="position: absolute; isolation: isolate; min-width: max-content; top: 0px; left: 0px; transform: translate3d(var(--x), var(--y), 0); z-index: var(--z-index);"
                          >

                            <div
                              data-scope="tooltip"
                              data-part="content"
                              dir="ltr"
                              data-state="open"
                              role="tooltip"
                              id="tooltip::r0::content"
                              style="pointer-events: auto;"
                              class="_tooltip-content_HASH_2"
                              data-ods="tooltip-content"
                              data-placement="top"
                            >

                              <p
                                class="_text--paragraph_HASH_54"
                                data-ods="text"
                              >Sample Tooltip Message
                              </p
                              >
                              </div
                              >
                              </div
                              >
                              </body
                              >
`;
